# hfpf-stellarator

./: .gitignore  README.md  pyproject.toml
data/: batch_0.pt  batch_1.pt  boundary_r_cos.pt  boundary_z_sin.pt
notebooks/: eda.ipynb  scbo.ipynb  viz_boundary.ipynb  viz_flux.ipynb
